Update WildFly test configs and add managed profile
see: #306